--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
       <div>
         <p>Nombres: <span>Jhoana Saray</span><br>
           Apellidos: <span>Rodriguez Gonzalez</span><br>
+          Cédula: <span>30.874.329</span><br>
           Materia: <span>Programación 3</span><br>
           Sección: <span>4</span>
         </p>
