--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 0 | Programación 3</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/style2.css' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;400&family=Prompt&family=Tilt+Neon&display=swap" rel="stylesheet">
   </head>
   <body>
+
+    <nav>
+      <a href="/login">Administrador</a>
+    </nav>
+
     <main>
       <h1>Mis Datos</h1>
       <div>
