--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -50,3 +50,25 @@ span {
     height: 30%;
   }
 }
+nav{
+  display:flex;
+  justify-content: flex-end;
+  align-items:center;
+  height:10vh;
+  transition:all 1s;
+}
+
+a{
+  background:white;
+  margin-top: 20px;
+  margin-right:60px;
+  font-size:25px ;
+  text-decoration: none;
+  padding:10px;
+  border-radius:15px 20px 10px 20px;
+}
+
+nav a:hover{
+color:rgb(185, 74, 240);
+border:1px solid black;
+}
