commit de la face 2

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -39,6 +39,14 @@
 						<input type="text" name="cantidad" required autocomplete="true">
 						<label for="cantidad">Cantidad</label>
 					</div>
+
+					<div>
+						<label for='categoria'>Categoria</label>
+                        <select id='categoria' name='categoria' required>
+            <option value="2">Categoria 2</option>
+            <option value="3">Categoria 3</option>
+            </select>
+					</div>
 					<div class="error hidden">
 						<p>Error al iniciar sesion</p>
 					</div>
