--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 
 <footer>
   <addres id='addres'>
-    <p id='footer'>Derechos de autor Angel Cutt</p>
+    <p id='footer'>Derechos de autor Jhoana</p>
   </addres>
 </footer>
