--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Productos</title>
   <link rel="stylesheet" type="text/css" href="/css/producto.css">
-  
+  <link rel="icon" type="image/x-icon" href="img/dado.png"/> 
 </head>
 <body>
   <header class="header">
@@ -31,6 +31,7 @@
             <th>Descripcion</th>
             <th>Calidad</th>
             <th>Cantidad</th>
+            <th>Categoria</th>
             <th><a href="/add"><img src="/img/add.png" id='add'></a></th>
           </tr>
           <%for(const producto of modelo){%>
@@ -42,11 +43,13 @@
               <td><%=producto.descripcion%></td>
               <td><%=producto.calidad%></td>
               <td><%=producto.cantidad%></td>
+              <td><%=producto.categoria_id%></td>
               <td class="icon">
               <a href="/update/<%= producto.producto_id%>"><img src="/img/update.png" width="30"></a>
               <a href="/delete/<%= producto.producto_id%>"><img src="/img/delete.png" width="30" id="delete"></a>
-              <a href="/addImagen">
-                <img src="/img/dropdown-icon.svg" alt="Subir imagen" title="Subir una imagen">
+
+              <a href="/addImagen/<%=producto.producto_id%>">
+                <img src="/img/agregar.png" alt="Subir imagen" title="Subir una imagen" width="30">
               </a>
              </td>
             </tr>
