--- a/static/css/login.css
+++ b/static/css/login.css
@@ -76,7 +76,10 @@ input[type="submit"]{
 
 input:focus ~ label,
 input:valid ~ label{
-	top: -5px;
+	top: -8px;
+	color:gold;
+	font-weight: bold;
+
 }
 
 .inputbox input{
