--- a/static/css/producto.css
+++ b/static/css/producto.css
@@ -1,6 +1,6 @@
-@font-face{
-	font-family:'Poppins';
-	src:url('./fuentes/Poppins-Regular.ttf');
+@font-face {
+  font-family: 'dali';
+  src: url(/fuentes/Xshow.ttf);
 }
 
 *{
@@ -16,7 +16,11 @@ body{
 	background-position: center;
 	background-repeat: no-repeat;
 }
-
+h1{
+margin:3rem auto;
+width:30%;
+text-align: center;
+}
 a {
 	text-decoration: none;
 	vertical-align: baseline;
@@ -27,13 +31,37 @@ a {
 }
 
 
-.header{
-    color: #21242c;
-	background-color: #ED9922;
-	border-radius: 25px;
-	padding: 20px;
-	margin-top: 5px;
+h1 {
+  color:white;
+  background:rgb(28, 44, 73);
+  width:30%;
+  text-align: center;
+  margin:4rem auto;
+  font: 2rem 'dali';
+  border-radius:15px 0 15px 0;
+
 }
+.header{
+  background-color: rgb(28, 44, 73);
+  border-radius: 25px;
+  padding: 20px;
+  margin-top: 5px;
+}
+.header a{
+  color:white;
+  margin-left:2rem;
+  text-decoration: none;
+  font-size:1.2rem;
+  font-weight: bold;
+  transition:all 1s;
+}
+.header a:hover{
+text-shadow:5px 5px 10px rgb(82, 175, 162);
+}
+.header a:nth-child(1):hover{
+color:red;
+}
+
 .navbar{
 	display: flex;
 	flex-direction: row;
@@ -79,13 +107,45 @@ a {
 	font-weight: bold;
 	text-transform: uppercase;
 }
+.navbar{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	text-align: center;
+}
 
-.header{
+.navbar ul{
+	text-decoration: none;
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	width: 13%;
+	margin-right: 20px;
+}
+.item a,
+.item a:visited{
     color: #21242c;
-	background-color: #ED9922;
-	border-radius: 25px;
-	padding: 20px;
-	margin-top: 5px;
+	padding: 10px;
+	border: 2px solid #000;
+	font-size: 18px;
+	transition: .1s all ease;
+}
+
+.item-d a,
+.item-d a:visited{
+	padding: 10px;
+	border: 2px solid #000;
+	color: #ED9922;
+    background-color: #21242c;
+	font-size: 18px;
+	transition: .1s all ease;
+}
+.navbar ul li a:hover{
+	border: 2px solid #ED9922;
+	background: #000;
+	color: #ED9922;
+	transition: .5s all ease;
 }
 .navbar{
 	display: flex;
@@ -128,61 +188,7 @@ a {
 	transition: .5s all ease;
 }
 
-.header{
-    color: #21242c;
-	background-color: #ED9922;
-	border-radius: 25px;
-	padding: 20px;
-	margin-top: 5px;
-}
-.navbar{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	text-align: center;
-}
 
-.navbar ul{
-	text-decoration: none;
-	list-style: none;
-	display: flex;
-	justify-content: space-between;
-	width: 13%;
-	margin-right: 20px;
-}
-.item a,
-.item a:visited{
-    color: #21242c;
-	padding: 10px;
-	border: 2px solid #000;
-	font-size: 18px;
-	transition: .1s all ease;
-}
-
-.item-d a,
-.item-d a:visited{
-	padding: 10px;
-	border: 2px solid #000;
-	color: #ED9922;
-    background-color: #21242c;
-	font-size: 18px;
-	transition: .1s all ease;
-}
-.navbar ul li a:hover{
-	border: 2px solid #ED9922;
-	background: #000;
-	color: #ED9922;
-	transition: .5s all ease;
-}
-
-.header{
-    color: #21242c;
-	background-color: #ED9922;
-	border-radius: 25px;
-	padding: 20px;
-	margin-top: 5px;
-}
 .navbar{
 	display: flex;
 	flex-direction: row;
@@ -231,7 +237,7 @@ a {
 .table{
 	border-radius: 20px;
 	margin: 50px auto;
-	width: 80%;
+	width: 90%;
 	background: #1C2C49;
 }
 
