--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,8 @@
   <body>
 
     <nav>
-      <a href="/login">Administrador</a>
+      <a href="/login">Admin</a>
+      <a href="/loginUsers">Clientes</a>
     </nav>
 
     <main>
@@ -26,5 +27,6 @@
         </p>
       </div>
     </main>
+    
   </body>
 </html>
