--- a/views/update.ejs
+++ b/views/update.ejs
@@ -12,8 +12,7 @@
 <body>
 
   <section>
-        <div class="form-box">
-            <div class="form-value">
+        
                 <form id="login_form" class="login_form" action="/update/<%=modelo.producto_id%>" method="post">
                     <h2>Actualizar Producto</h2>
                     <div class="inputbox">
@@ -40,15 +39,22 @@
                         <input type="text" name="cantidad" required autocomplete="true" value='<%=modelo.cantidad%>'>
                         <label for="cantidad">Cantidad</label>
                     </div>
-                    <div class="error hidden">
-                        <p>Error al iniciar sesion</p>
+                    
+                    <div>
+                        <label for='categoria'>Categoria</label>
+                        <select id='categoria' name='categoria' required>
+            <option value="1">Categoria 1</option>
+            <option value="2">Categoria 2</option>
+            </select>
                     </div>
-                    <input type="submit" value="Actualizar" id="update">
-                    <a href="/productos" class="boton">Volver</a>
+    
+    <div style="display:flex;justify-content:center;align-items: center;margin-top:2rem;margin-bottom:2rem;">
+                        <input type="submit" value="Actualizar" id="update">
+                        <input type="button" onclick="redireccionar()" id='volverInput' value="Volver">
+                    </div>
+
                 </form>
-            </div>
-        </div>
+         
     </section>
-<%- include('footer') -%>
 </body>
 </html>
