--- a/views/addImagen.ejs
+++ b/views/addImagen.ejs
@@ -4,28 +4,48 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Imagen</title>
-	<link rel="stylesheet" href="/css/update.css">
+	<link rel="stylesheet" href="/css/addImagen.css">
 </head>
 <body>
-  
-  <section>
-		<div class="form-box">
-			<div class="form-value">
-				<form id="login_form" class="login_form" action="/addPost" method="post">
+
+	<section>
+		
+		
+				<form id="login_form" class="login_form" action="/addImagen/<%=modelo.producto_id%>" method="post" enctype="multipart/form-data">
+
 					<h2>Agregar Imagen</h2>
-                    <input type="file" name="img" id="img" placeholder="Imagen">
-                    <div class="inputbox">
-                      <input type="text" name="destacado" autocomplete="true" id="destacado">
-                      <label for="descripcion">Destacado</label>
-					</div>
-					<div class="error hidden">
-						<p>Error al iniciar sesion</p>
-					</div>
-					<input type="submit" value="agg Imagen" id="sendImg">
-                    <a href="/productos" class="boton">Volver</a>
+
+					<input type="file" name="img" id="img" placeholder="Imagen">
+
+					
+             
+             <div id='selectLabel'>
+
+             	<label for="destacado">Destacado</label>
+
+						  <select name="destacado">
+						   	<option value='1'>principal</option>
+							  <option value='0'>no main</option>
+						  </select>
+
+             </div>
+
+						
+					
+          
+          <div id='agregarVolver'>
+          	<input type="submit" value="Agregar" id="sendImg">
+          	<input type="button" onclick="redireccionar()" value='volver' class='volverr'>
+          </div>
+					
 				</form>
-			</div>
-		</div>
+		
+	
 	</section>
+	<script type="text/javascript">
+		const redireccionar = ()=>{
+			window.location.href='/productos';
+		}
+	</script>
 </body>
 </html>
