--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -8,18 +8,15 @@
   
 </head>
 <body>
-  <header class="header">
-    <nav class="navbar">
-      <div id='h1'>
-       <h1 class="titulo">Categorias <%=modelo.length%></h1> 
-     </div>
-     <img src="/img/ci.png" class="game-board-icon" alt="Icono de juegos">
-     <ul class="item-box">
-      <li class="item"><a href="/productos">Productos</a></li>
-      <li class="item item-d"><a href="/login">Volver</a></li>
-    </ul>
-  </nav>
+<header class="header">
+   <a href="/logout2">cerrar</a>
+   <a href="/categorias">Categorias</a>
+   <a href="/productos">Productos</a>
+   <a href="/usuarios">Usuarios</a>
+   <a href="/compras">Compras</a>
   </header>
+
+  <h1>Categorias</h1>
   
   <div class="table">
     <table border>
@@ -35,13 +32,13 @@
               <td class="icon">
 
               <a href="/updateCategoria/<%=categorias.id%>"><img src="/img/update.png" width="30"></a>
-
+              <a href="/eliminarCategoria/<%=categorias.id%>"><img src="/img/delete.png" width="30"></a>
              </td>
             </tr>
            <%}%>
         </table>
        
   </div>
-  <a id='botonProductos' href="/productos">Volver</a>
+ 
 </body>
 </html>
