--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -8,5 +8,5 @@
 </style>
 <body>
 
-<h1 style='margin-left:25%;line-height:450px'>Lo sentimos Archivo No encontrado</h1>
+<h1 style='display:flex;justify-content:center;aling-items:center;margin-top:15rem'>Lo sentimos ruta No encontrada</h1>
 </body>
