--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -5,21 +5,20 @@
   <meta charset="UTF-8">
   <title>Productos</title>
   <link rel="stylesheet" type="text/css" href="/css/producto.css">
-  
+  <link rel="icon" type="image/x-icon" href="img/dado.png"/> 
+  <script type="text/javascript" src="/js/alert.js"></script>
 </head>
 <body>
+
   <header class="header">
-    <nav class="navbar">
-      <div id='h1'>
-       <h1 class="titulo">Productos <%=modelo.length%></h1> 
-     </div>
-     <img src="/img/ci.png" class="game-board-icon" alt="Icono de juegos">
-     <ul class="item-box">
-      <li class="item"><a href="/categorias">Categorias</a></li>
-      <li class="item item-d"><a href="/login">Volver</a></li>
-    </ul>
-  </nav>
+   <a href="/logout2">cerrar</a>
+   <a href="/categorias">Categorias</a>
+   <a href="/productos">Productos</a>
+   <a href="/usuarios">Usuarios</a>
+   <a href="/compras">Compras</a>
   </header>
+ 
+<h1>Productos</h1>
 
   <div class="table">
     <table>
@@ -31,6 +30,7 @@
             <th>Descripcion</th>
             <th>Calidad</th>
             <th>Cantidad</th>
+            <th>Categoria</th>
             <th><a href="/add"><img src="/img/add.png" id='add'></a></th>
           </tr>
           <%for(const producto of modelo){%>
@@ -42,11 +42,13 @@
               <td><%=producto.descripcion%></td>
               <td><%=producto.calidad%></td>
               <td><%=producto.cantidad%></td>
+              <td><%=producto.categoria_id%></td>
               <td class="icon">
               <a href="/update/<%= producto.producto_id%>"><img src="/img/update.png" width="30"></a>
               <a href="/delete/<%= producto.producto_id%>"><img src="/img/delete.png" width="30" id="delete"></a>
-              <a href="/addImagen">
-                <img src="/img/dropdown-icon.svg" alt="Subir imagen" title="Subir una imagen">
+
+              <a href="/addImagen/<%=producto.producto_id%>">
+                <img src="/img/agregar.png" alt="Subir imagen" title="Subir una imagen" width="30">
               </a>
              </td>
             </tr>
@@ -54,5 +56,8 @@
         </table>
        
   </div>
+  <script type="text/javascript">
+    Swal.fire("Bienvenido al Sistema Administrador");
+  </script>
 </body>
 </html>
