--- a/views/loginUsers.ejs
+++ b/views/loginUsers.ejs
@@ -24,9 +24,16 @@
 					</div>
 					<input type="submit" name="enviar" value="Login" id="iniciar">
 
-					<div style='display:flex;justify-content: center;align-items: center;color:white;margin-top:2rem;'>
-						<p>¿No tienes una cuenta? registrate aqui </p>
+					<div style='display:flex;flex-direction:column;justify-content: center;align-items: center;color:white;margin-top:2rem;'>
+                        <div>
+                          <p>¿No tienes una cuenta? registrate aqui </p>
 						<a href="/registroUsers" style='color:gold;margin-left:1rem;'>Registro</a>
+                        </div>	
+
+                        <div>
+                        <p>¿Haz olvidado la contraseña?</p>
+                        <a href='/recuperarPassword'>Restablecer</a> 
+                        </div>
 
 					</div>
 
