--- a/views/recuperarPassword.ejs
+++ b/views/recuperarPassword.ejs
@@ -48,7 +48,7 @@
   </script>
 	<style type="text/css">
 		 body{
-	background-image:url('https://images.unsplash.com/photo-1563248870-e45d2e6df7ee?auto=format&fit=crop&q=80&w=1275&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+	background-image:url('https://images.pexels.com/photos/10626015/pexels-photo-10626015.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
 	background-size:cover;
 	background-attachment: fixed;
 }
@@ -60,6 +60,7 @@ form{
 	width:30%;
 	margin:3rem auto;
 	background:rgba(0,0,0,.6);
+      
 }
 input{
 	margin-top:2rem;
@@ -75,7 +76,6 @@ h1{
 	display:flex;
 	justify-content: center;
 	margin-top:2rem;
-	background:rgba(0,0,0,.6);
 }
 .contenedorBotonera{
 	display:flex;
@@ -102,26 +102,30 @@ cursor:pointer;
 
 
 	</style>
+<link rel="stylesheet" type="text/css" href="/css/login.css">
 </head>
 <body>
 
 <h1>Recuperación de Contraseña</h1>		
-
+<div class='form-box'>
 <form action="/recuperarPassword" method="POST">
+
+        <div class="inputbox">
 	<label>Nombre de Usuario</label>
 	<input type="text" name="userName" placeholder="Ingrese User">
+        </div>
+
+         <div class='inputbox'>
 	<label>Correo Electronico</label>
 	<input type="email" name='email' placeholder="Ingrese Email">
+        </div>
 
 	<div class='contenedorBotonera'>
-	  
-
 	<input type="submit" value="Enviar">
 	<input type="button" value="Cancelar" onclick="cancelar()">
-
 	</div>
 </form>
-
+</div>
 <script type="text/javascript"> 
 	function cancelar(){
 		window.location.href='/loginUsers';
