--- a/views/restablecer.ejs
+++ b/views/restablecer.ejs
@@ -49,7 +49,7 @@
 	<style type="text/css">
 
 		body{
-			background-image:url('https://images.unsplash.com/photo-1563248870-e45d2e6df7ee?auto=format&fit=crop&q=80&w=1275&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+			background-image:url('https://images.pexels.com/photos/10626015/pexels-photo-10626015.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
 	        background-size:cover;
 	        background-attachment: fixed;
 		}
@@ -86,25 +86,37 @@
          	background: rgba(0,0,0,.6);
          }
 	</style>
+        <link rel="stylesheet" type="text/css" href="/css/login.css">
 </head>
 <body>
 
 <h1>Restablece tu contraseña</h1>
-    
+
+<div class='form-box'>
 <form action='/restablecer-contrasena' method="POST" id='myForm'>
+
+        <div class='inputbox'>
 	<label>Confirma tu nombre de Usuario</label>
 	<input type="text" name="userName">
+        </div>
+
+        <div class='inputbox'>
 	<label>Contraseña Nueva</label>
 	<input type="password" name="password" id='password-1'>
+        </div>
+
+        <div class='inputbox'>
 	<label>Confirmar Contraseña</label>
 	<input type="password" name="passwordC" id='password-2'>
-     <div class="contenedorBotonera">
-     	
+        </div>
+
+        <div class="contenedorBotonera">
 	  <input type="submit" value="enviar">
 	  <input type="button" value="Login" onclick="login()">
+        </div>
 
-     </div>
 </form>
+</div>
 
 
 
