--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/x-icon" href="img/dado.png"/>
     <link rel="stylesheet" type="text/css" href="/css/clientes.css">
     <script type="text/javascript" src="/js/alert.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WDYBWY97KW"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5NPDM9G6PJ"></script>
 <!--Google Analytics-->
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -22,7 +22,7 @@
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', 'G-WDYBWY97KW');
+  gtag('config', 'G-5NPDM9G6PJ');
 </script>
 <!--Schema Markup-->
  <script type="application/ld+json">
