--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -8,7 +8,7 @@
   <meta property="og:title" content="<%= og.title %>">
   <meta property="og:description" content="<%= og.description %>">
   <meta property="og:image" content="<%= og.image %>">
-   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WDYBWY97KW"></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G-5NPDM9G6PJ"></script>
 <!--Google Analytics-->
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -16,7 +16,7 @@
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', 'G-WDYBWY97KW');
+  gtag('config', 'G-5NPDM9G6PJ');
 </script>
 <!--Schema Markup-->
  <script type="application/ld+json">
