--- a/views/recuperarPassword.ejs
+++ b/views/recuperarPassword.ejs
@@ -58,8 +58,9 @@ form{
 	justify-content: center;
 	align-items: center;
 	width:30%;
+        height:50vh;
 	margin:3rem auto;
-	background:rgba(0,0,0,.6);
+	background:rgb(28, 44, 73);
       
 }
 input{
@@ -110,7 +111,7 @@ cursor:pointer;
 <div class='form-box'>
 <form action="/recuperarPassword" method="POST">
 
-         <div class='inputbox'>
+         <div style='display:flex;flex-direction:column;justify-content:center;aling-items:center'>
 	<label>Correo Electronico</label>
 	<input type="email" name='email' placeholder="Ingrese Email">
         </div>
