--- a/views/restablecer.ejs
+++ b/views/restablecer.ejs
@@ -60,7 +60,7 @@
 			align-items:center;
 			background:rgb(28, 44, 73);
 			width:30%;
-                        height:50vh;
+                        height:auto;
 			margin:3rem auto;
 		}
 		label{
