--- a/views/restablecer.ejs
+++ b/views/restablecer.ejs
@@ -96,7 +96,7 @@
 <form action='/restablecer-contrasena' method="POST" id='myForm'>
 
         
-	<label>Confirma tu nombre de Usuario</label>
+	<label>Nombre de Usuario</label>
 	<input type="text" name="userName">
 
 
